:sparkles: Aggiunto `CNAME`

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,9 @@ jobs:
       - name: Build website
         run: pnpm build
 
+      - name: Create CNAME file
+        run: echo "civica.racca.me" > ./build/CNAME
+
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
