:mag: Update deps

--- a/.prettierrc
+++ b/.prettierrc
@@ -9,5 +9,6 @@
   "bracketSameLine": true,
   "bracketSpacing": true,
   "arrowParens": "always",
-  "plugins": ["prettier-plugin-svelte"]
+  "plugins": ["prettier-plugin-svelte"],
+  "overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
 }
