--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,28 +10,19 @@
     "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
-    "types": ["vite/client"],
-    "paths": {
-      "$QWER": ["./QWER"],
-      "$QWER/*": ["./QWER/*"],
-      "$lib": ["./src/lib"],
-      "$lib/*": ["./src/lib/*"],
-      "$generated": ["./src/generated"],
-      "$generated/*": ["./src/generated/*"],
-      "$stores": ["./src/lib/stores"],
-      "$stores/*": ["./src/lib/stores/*"],
-      "$config": ["./user/config"],
-      "$config/*": ["./user/config/*"],
-      "$assets": ["./user/assets"],
-      "$assets/*": ["./user/assets/*"],
-      "$custom": ["./user/custom"],
-      "$custom/*": ["./user/custom/*"],
-      "$static": ["./static"],
-      "$static/*": ["./static/*"],
-      "$i18n": ["./src/i18n"],
-      "$i18n/*": ["./src/i18n/*"]
-    }
+    "types": ["vite/client"]
   },
-  "include": ["src/**/*"],
+  "include": [
+    "./types/**/$types.d.ts",
+    "./svelte.config.js",
+    "./vite.config.js",
+    "./vite.config.ts",
+    "./src/**/*.js",
+    "./src/**/*.ts",
+    "./src/**/*.svelte",
+    "./tests/**/*.js",
+    "./tests/**/*.ts",
+    "./tests/**/*.svelte"
+  ],
   "exclude": ["node_modules", "build/**/*", "src/lib/template/**/*", "src/generated/**/*"]
 }
